--- a/tugas/impossible-table.html
+++ b/tugas/impossible-table.html
@@ -4,7 +4,7 @@
 	<title>Amazing Table</title>
 </head>
 <body>
-	<table border="1">
+	<table border="1" cellpadding="13">
 		<tr>
 			<td rowspan="6"></td>
 			<td colspan="6"></td>
